# LearnCG

./: README.md
LearnOpenGL/LearnOpenGL/: .gitignore  CMakeLists.txt  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  imgui.ini
LearnOpenGL/LearnOpenGL/Resources/Shaders/: depthCubeMap.frag  depthCubeMap.geom  depthCubeMap.vert  model_main.frag  model_main.vert
LearnOpenGL/LearnOpenGL/Shaders/: main.frag  main.vert  model_main.frag  model_main.vert
LearnOpenGL/LearnOpenGL/dependencies/Glad/: CMakeLists.txt
LearnOpenGL/LearnOpenGL/dependencies/imgui/: CMakeLists.txt
LearnOpenGL/LearnOpenGL/dependencies/lib/debug/: libboost_filesystem-vc143-mt-gd-x64-1_78.lib
LearnOpenGL/LearnOpenGL/dependencies/lib/release/: libboost_filesystem-vc143-mt-x64-1_78.lib
LearnOpenGL/LearnOpenGL/src/: CMakeLists.txt  main.cpp
LearnOpenGL/LearnOpenGL/src/Application/: CmakeLists.txt
LearnOpenGL/LearnOpenGL/src/Application/General/: application.cpp  application.h
LearnOpenGL/LearnOpenGL/src/EventSystem/: CMakeLists.txt
LearnOpenGL/LearnOpenGL/src/GameObject/: gameObject.cpp  gameObject.h  transform.cpp  transform.h
LearnOpenGL/LearnOpenGL/src/Mesh/: CMakeLists.txt  mesh.cpp  mesh.h  submesh.cpp  submesh.h
LearnOpenGL/LearnOpenGL/src/Rendering/: CMakeLists.txt  renderer.cpp  renderer.h
LearnOpenGL/LearnOpenGL/src/ResourceManager/: CMakeLists.txt  resourceManager.cpp  resourceManager.h
LearnOpenGL/LearnOpenGL/src/Scene/: scene.cpp  scene.h
LearnOpenGL/LearnOpenGL/src/Utilities/: CMakeLists.txt  types.cpp  types.h
LearnOpenGL/LearnOpenGL/src/pch/: pch.h
(+110 files in other folders)
